# auth-service

./: .env  Cargo.toml
curl/: login.curl  login.json  register_app.curl  register_app.json  register_user.curl  register_user.json  send_verify_code.curl  send_verify_code.json  verify_secret.curl  verify_secret.json
docker-compose/: docker-compose.yml
migrations/: 20230809132909_init.sql  20230812012000_change_timestamp.sql  20230812020334_add_foreign_key_for_users.sql  20230812074738_alter_id_type.sql  20230917124833_drop-tables-and-columns.sql  20230917125226_change-id-type.sql  20230917131842_drop-app-id-column.sql
src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  services.rs
src/cacher/: redis.rs
src/core/: cacher.rs  entities.rs  error.rs  hasher.rs  mod.rs  repository.rs  secret_generator.rs  service.rs  token_manager.rs  verify_code_manager.rs
src/hasher/: sha.rs
src/hashers/: sha.rs
src/impls/: mod.rs
src/impls/cachers/: redis.rs
src/impls/hashers/: sha.rs
src/impls/repositories/: postgresql.rs
src/impls/secret_generators/: random.rs
src/impls/verify_code_managers/: fake.rs
src/middlewares/: actix_web.rs
src/repositories/: memory.rs  mod.rs  mongo.rs  postgresql.rs
src/secret_generators/: random.rs
src/token_managers/: jwt.rs
src/verify_code_managers/: fake.rs
