[package]
name = "nbauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.31.0", features = ["rt", "macros"] }
actix-web = { version = "4.3.1" }
chrono = "0.4.26"
dotenv = "0.15.0"
hex = "0.4.3"
rand = "0.8.5"
redis = { git = "https://github.com/redis-rs/redis-rs.git", version = "0.23.2", features = [
    "tokio-comp",
] }
redis_rs = "0.9.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
sha2 = "0.10.7"
sqlx = { version = "0.7.1", features = ["postgres", "chrono", "runtime-tokio"] }
uuid = { version = "1.4.1", features = ["v4"] }
env_logger = "0.10.0"
